ConfigMap/envoy-ConfigMap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy
data:
  envoy: |
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
    static_resources:
      clusters:
        - circuit_breakers:
            thresholds:
              max_connections: 2
              max_pending_requests: 25
              max_requests: 2
              max_retries: 3
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: theresa-frontend-cluster-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: theresa-frontend.default.svc.cluster.local
                          port_value: 3000
          name: theresa-frontend-cluster
          type: STRICT_DNS
        - circuit_breakers:
            thresholds:
              max_connections: 2
              max_pending_requests: 25
              max_requests: 2
              max_retries: 3
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: theresa-go-cluster-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: theresa-go.default.svc.cluster.local
                          port_value: 8000
          name: theresa-go-cluster
          type: STRICT_DNS
        - lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: theresa-drive-cluster-service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: theresa-drive.default.svc.cluster.local
                          port_value: 5244
          name: theresa-drive-cluster
          type: STRICT_DNS
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 443
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    access_log:
                      - name: envoy.access_loggers.file
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                          log_format:
                            json_format:
                              authority: "%REQ(:AUTHORITY)%"
                              bytes_received: "%BYTES_RECEIVED%"
                              bytes_sent: "%BYTES_SENT%"
                              downstream_local_address: "%DOWNSTREAM_LOCAL_ADDRESS%"
                              downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                              duration: "%DURATION%"
                              forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                              host: "%REQ(HOST)%"
                              message: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(:AUTHORITY)%%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION%\n"
                              method: "%REQ(:METHOD)%"
                              path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                              protocol: "%PROTOCOL%"
                              referer: "%REQ(REFERER)%"
                              request_id: "%REQ(X-REQUEST-ID)%"
                              response_code: "%RESPONSE_CODE%"
                              response_flags: "%RESPONSE_FLAGS%"
                              route_name: "%ROUTE_NAME%"
                              start_time: "%START_TIME%"
                              upstream_cluster: "%UPSTREAM_CLUSTER%"
                              upstream_host: "%UPSTREAM_HOST%"
                              upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                              upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                              user_agent: "%REQ(USER-AGENT)%"
                    codec_type: AUTO
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - domains:
                            - theresa.wiki
                          name: frontend
                          routes:
                            - match:
                                prefix: /
                              route:
                                cluster: theresa-frontend-cluster
                                timeout: 120s
                        - domains:
                            - static.theresa.wiki
                          name: static
                          routes:
                            - match:
                                prefix: /
                              route:
                                cluster: theresa-go-cluster
                                timeout: 120s
                        - domains:
                            - drive.theresa.wiki
                          name: drive
                          routes:
                            - match:
                                prefix: /
                              route:
                                cluster: theresa-drive-cluster
                                timeout: 120s
                    stat_prefix: ingress_http
              transport_socket:
                name: envoy.transport_sockets.tls
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                  common_tls_context:
                    tls_certificates:
                      - certificate_chain:
                          filename: /cert/theresa.wiki.crt
                        private_key:
                          filename: /cert/theresa.wiki.key
